Fix it so classes, triselect are styled better for clicked/not via css search still borked but these two now appear as buttons, and use css only to style based off invisible checkbox

--- a/nextjs/styles/index.css
+++ b/nextjs/styles/index.css
@@ -1,3 +1,11 @@
+:root {
+    --button-down: grey;
+    --button: rgb(180, 180, 180);
+    --button-border: rgb(214, 214, 214);
+    --header-color: #1F2016;
+    --header-text: #E2E3C5;
+}
+
 body {
     font: 14px "Century Gothic", Futura, sans-serif;
     margin: 20px;
@@ -39,9 +47,29 @@ input {
     width: 20px;
 }
 
+
+/* Style check + label as a button */
 .class_ input {
-    width: 20px;
+    display: none;
 }
+
+.class_ label 
+{
+    display: inline-block;
+    border: solid 5px var(--button-border);
+    border-radius: 10px;
+    background-color: var(--button);
+    padding: 3px;
+    margin: 3px;
+}
+
+/* Style label based on if adjacent checkbox is selected */
+.class_ input:checked ~ label 
+{
+    background-color: var(--button-down);
+}
+
+/* Style canvas & body? */
 
 #canvas {
     display: block;
@@ -52,11 +80,6 @@ body {
 }
 
 /* Header & footer */
-
-:root {
-    --header-color: #1F2016;
-    --header-text: #E2E3C5;
-}
 
 header,
 footer {
@@ -81,48 +104,30 @@ footer {
 
 /* Term tri-select feature css */
 
-:root {
-    --button-down: grey;
-    --button: rgb(180, 180, 180);
-    --button-border: rgb(214, 214, 214);
-}
-
 #term-selector {
     display: flex;
     flex-direction: row;
 }
 
-.term {
+/* Style label to be a button */
+.term label {
+    display: inline-block;
+    border: solid 5px var(--button-border);
     border-radius: 10px;
-    margin: 10px 10px 10px 10px;
     background-color: var(--button);
+    padding: 3px;
+    margin: 3px;
 }
 
-/* Make label fit div so that can be clicked*/
-.term label {
-    width: 100%;
-    height: 100%;
-    padding: 10px;
-    display: inline-block;
+/* Style label adjacent to invisible checkbox to change colour based on checkmark */
+.term input:checked ~ label 
+{
+    background-color: var(--button-down);
 }
 
 .term-radio 
 {
     display: none;
-}
-
-.term:active {
-    background-color: var(--button-down);
-}
-
-.mark-selected {
-    background-color: var(--button-down);
-    border: 5px solid var(--button-border);
-}
-
-.mark-deselected {
-    border: 5px solid var(--button-border);
-    background-color: var(--button);
 }
 
 /* Contribute page */
